css/index.css
/*
Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 license. © 2020
https://github.com/aidswidjaja
*/

/* Primary */

html, body {
    margin: 0;
    padding: 0;
    height: 100vh; /* height will resize when address bar disappears - this appears to be a fixed behaviour in Chrome 80 that was released 7 Feb 2020 | maintains compatibility for Chrome for Android scrolling: see https://developers.google.com/web/updates/2016/12/url-bar-resizing */
    overflow-y: scroll; /* see https://stackoverflow.com/a/49278385/6299634 */
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
    color: #343A40;
    font-family: 'Lato', sans-serif;
}

::-webkit-scrollbar {
    width: 0;
    height: 0;
    display: none;
}

html {
    overflow: hidden;
}

body {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

.navbar {
    background-color: #202125;
    font-weight: 900;
}

.navbar-brand {
    font-size: 40px;
}

.nav-item {
    font-size: 18px;
    padding-top: 23px;
}

.bg {
    background-position: center center;
	background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #343A40;
}

.content {
    padding:0;
}

.divcontent {
    padding: 100px;
}

/* Text */

h1, .display-4 {
    font-weight: 900;
    font-size: 60px;
    text-align: left;
}

.display-6 {
    font-weight: normal;
    font-size: 30px;
    text-align: left;
}

.bannerh1 {
    font-weight: 900;
    font-size: 45px;
    text-align: left;
}

.aboutflex {
    font-size: 50px;
    top: 0;
    bottom: 0;
}

/* Splash */

#splash {
    min-height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: center;
    text-align: center;
    overflow: hidden;
}

#splashmobile {
    height: 100vh; /* maintains compatibility with mobile devices with address bars */
    width: 100%; /* maintains compatibility with Navbar and desktop scroll bars */
    text-align: left;
}

#splashmobiletext {
    text-align: left;
    color: #343A40
}

#splashbutton {
    margin: 0 auto;
    text-align: center;
}

#splashtext {
    text-align: center;
    color: #343A40
}

#page {
    min-height: 100vh;
    min-width: 100%;
}

#pagemobile {
    min-height: 100vh; /* maintains compatibility with mobile devices with address bars */
    min-width: 100%; /* maintains compatibility with Navbar and desktop scroll bars */
}

#pagetext {
    color: #343A40;
    margin: 40px;
}

#hotlinelink {
    margin: 5px;
}

/* Cards */

.card-title {
    font-weight: 900;
}

.card {
    margin-bottom: 10px;
}

.cardteam {
    border-radius: 5%;
}

.teamdiv {
    margin: 0px;
}

.btn-index {
    background-color: #7866ff;
    color: #ffffff;
    font-weight: 900;
}

.btn-index:hover {
    background-color: #a296fa;
    color: #ffffff;
    font-weight: 900;
}

.btn-dangerindex {
    font-weight: 900;
}

/* Flex */
/* https://css-tricks.com/almanac/properties/f/flex-wrap/ */

.wrap {
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    width: 100px;
    text-align: center;
}

.flex-container {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -moz-flex;
  display: -webkit-flex;
  display: flex;
  -ms-box-orient: horizontal;
  list-style: none;
}

.teamimg {
    height: 350px;
    margin: 50;
    border-radius: 5%;
}

.teamtext {
    color: #343A40;
    text-align: center;
    margin: 5px;
}

.flex-item {
    margin: 100px;
}

.team-flex-item {
    margin: 50px;
}

/* Misc */

.indexheader {
    font-weight: 900;
    font-size: 70px;
    color: #000;
}

.indexlead {
    font-size: 20px;
    color: #000;
}

.indextextoof {
    margin-top: 300px;
}

.indexcontainer {
    margin-top: 50px;
    padding: 75px;
}

.indexrow {
    width: auto;
}

.indexjumbo {
    height: auto;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.indexjumbooof {
    height: auto;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 1280px;
}

#oof {
    color: #000;
    margin: 25px;
}

.socialnav {
    padding: 0;
}

#copyright {
    color:#807F80;
    font-size: 15px;
}

#copyrightlink {
   color: #a296fa;
}

.aboutbanner {
    background-color: #F6F6F6;
    margin: 0;
}

.livelypurple {
    color: #7866ff;
}

.rotatopotato {
    transform: rotate(180deg);
}

.aboutready {
    font-size: 30px;
    text-align: center;
}

.joinbtn {
    background-color: #43B581;
    color: #ffffff;
    font-weight: 900;
    display: inline;
    text-align: center;
}

.team {
    list-style-type: none;
}

